# c-learning

./: .gitignore
chip-8/: CMakeLists.txt  Chip.cpp  Chip.h  main.cpp
data_structures/: main.c
data_structures/vector/: vector.c  vector.h
tinyrenderer/: CMakeLists.txt  main.cpp  tgaimage.cpp  tgaimage.h
